# wagi-azure-samples

./: .gitignore  Cargo.toml  justfile  readme.md  wagi.template.toml
.github/workflows/: rust.yml
src/: lib.rs
